# IceSculpt

./: .gitignore  AppImageBuilder.yml  GEMINI.md  LICENSE  README.md  coverage.xml  org.icesculpt.IceSculpt.yml  pyproject.toml  ruff.toml  setup.py
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
icesculpt/: __init__.py  app.py  color_utils.py  icesculpt-launcher  icestudio-launcher  linter.py  main_window.py  pixmap_generator.py  preview_renderer.py  theme_model.py  theme_parser.py  xpm_codec.py
icesculpt/data/: theme_keys.json
icesculpt/dialogs/: about.py  import_export.py  new_theme.py
icesculpt/editors/: color_editor.py  desktop_editor.py  dimension_editor.py  font_editor.py  icon_editor.py  look_editor.py  metadata_editor.py  pixmap_editor.py  taskbar_editor.py
icesculpt/widgets/: color_swatch.py  gradient_builder.py  param_row.py  pixmap_canvas.py  preview_area.py
tests/: capture_ui.py  render_pixmaps.py  render_presets.py  render_preview.py  test_all_editors.py  test_app_logic.py  test_color_utils.py  test_editors_deep.py  test_icon_editor_logic.py  test_import_export.py  test_import_export_deep.py  test_linter.py  test_main_window_deep.py  test_main_window_extended.py  test_main_window_logic.py  test_more_editors.py  test_parser.py  test_pixmap_canvas_logic.py  test_pixmap_generator.py  test_pixmap_generator_extra.py  test_pixmap_logic_deep.py  test_pixmap_recolor.py  test_renderer_deep.py  test_theme_model.py  test_ui_logic.py  test_widgets_deep.py  test_widgets_logic.py  test_xpm_codec.py
(+4 files in other folders)
